Several modifications, see below for details.
Note: Yang/Tree not updated for Streaming and Equipment.

1.	Added the missing augments to EventNotification Signal (TapiTopology,
TapiConnectivity, TapiOam, TapiNotification, TapiPathComputation,
TapiVirtualNetwork).
2.	TapiCommon: centralized the PmParamName and AlarmName enums, based on
Detected enum. This allows to have TapiFm and TapiOam independency.
3.	TapiTopology: NRGAggregatesNEP becomes navigable in both directions.
4.	TapiTopology: ForwardingRule becomes identity (is leaf = false).
5.	TapiTopology: NodeRuleGroup may refer to zero NEPs, previously was at
least 1. (not translated, removed from yang the manual min-elements).
6.	TapiTopology: Rule now references the Profile.
7.	TapiConnectivity: ConnectivityService, the direction was wrongly
readonly.
8.	TapiPhotonic: otherProperties (name-value pairs) added to
CommonExplicit of TransceiverExplicitProfile.
9.	TapiPhotonic: OtsImpairments is now composed by OtsMediaCepSpec, no
longer by OtsNodeEdgePointSpec.
10.	TapiPhotonic: OtsiConnectionEndPointSpec deleted. Added to
OtsiMcConnectionEndPointSpec the composition to OtsiTerminationPac.
11.	TapiPhotonic: OtsiMcPropertiesPac, remains only the central
frequency.
12.	TapiPhotonic: deleted the physical-cep-pac.
13.	TapiPhotonic: OtsiTerminationPac, selectedCentralFrequency now
megahertz and integer, and corrected typo transmited – transmittedPower,
selectedSpectrum is now of FrequencyRange simple type.
14.	TapiPhotonic: McCepHasOtsiMcPac from [1..*] to [0..*].
15.	TapiPhotonic: TransceiverProfile inserted between Profile and the 3
specific transceiver profiles.
16.	TapiPhotonic: RoadmPathProfile inserted between Profile and the 2
specific roadm path profiles.
17.	TapiPhotonic: new RoadmForwardingRule augmenting
TapiTopology:ForwardingRule.
18.	TapiPhotonic: all frequency types are integer, specified in MHz.
19.	TapiPhotonic: deleted OtsiServiceInterfacePointSpec and
OtsiCapabilityPac, MediaChannelServiceInterfacePoint

--- a/OAS/tapi-streaming.yaml
+++ b/OAS/tapi-streaming.yaml
@@ -42,7 +42,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/tapi-common:context/:
+  /data/tapi-common:context:
     get:
       tags:
       - "tapi-common"
@@ -105,7 +105,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/name/:
+  /data/tapi-common:context/name:
     post:
       tags:
       - "tapi-common"
@@ -127,7 +127,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/name={value-name}/:
+  /data/tapi-common:context/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -192,7 +192,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile/:
+  /data/tapi-common:context/profile:
     post:
       tags:
       - "tapi-common"
@@ -212,7 +212,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/profile={uuid}/:
+  /data/tapi-common:context/profile={uuid}:
     get:
       tags:
       - "tapi-common"
@@ -271,7 +271,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/name/:
+  /data/tapi-common:context/profile={uuid}/name:
     post:
       tags:
       - "tapi-common"
@@ -298,7 +298,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/profile={uuid}/name={value-name}/:
+  /data/tapi-common:context/profile={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -378,7 +378,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile:
     get:
       tags:
       - "tapi-common"
@@ -461,7 +461,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -480,7 +480,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -500,7 +500,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point/:
+  /data/tapi-common:context/service-interface-point:
     post:
       tags:
       - "tapi-common"
@@ -520,7 +520,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}:
     get:
       tags:
       - "tapi-common"
@@ -579,7 +579,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity:
     get:
       tags:
       - "tapi-common"
@@ -598,7 +598,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size:
     get:
       tags:
       - "tapi-common"
@@ -618,7 +618,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-cep-layer-protocol-qualifier-instances/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-cep-layer-protocol-qualifier-instances:
     get:
       tags:
       - "tapi-common"
@@ -637,7 +637,7 @@ paths:
             $ref: "#/definitions/tapi.common.SupportedLayerProtocolQualifierWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -656,7 +656,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -676,7 +676,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/name/:
+  /data/tapi-common:context/service-interface-point={uuid}/name:
     post:
       tags:
       - "tapi-common"
@@ -703,7 +703,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -783,7 +783,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -807,7 +807,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/sink-profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/sink-profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -831,7 +831,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/source-profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/source-profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -855,7 +855,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-cep-layer-protocol-qualifier-instances/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-cep-layer-protocol-qualifier-instances:
     get:
       tags:
       - "tapi-common"
@@ -874,7 +874,7 @@ paths:
             $ref: "#/definitions/tapi.common.SupportedLayerProtocolQualifierWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -893,7 +893,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -913,7 +913,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity:
     get:
       tags:
       - "tapi-common"
@@ -933,7 +933,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size:
     get:
       tags:
       - "tapi-common"
@@ -953,7 +953,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context:
     get:
       tags:
       - "tapi-streaming"
@@ -1016,7 +1016,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/name/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/name:
     post:
       tags:
       - "tapi-streaming"
@@ -1038,7 +1038,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/name={value-name}/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/name={value-name}:
     get:
       tags:
       - "tapi-streaming"
@@ -1103,7 +1103,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}:
     get:
       tags:
       - "tapi-streaming"
@@ -1122,7 +1122,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.StreamMonitorWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/available-stream/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/available-stream:
     get:
       tags:
       - "tapi-streaming"
@@ -1141,7 +1141,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.AvailableStreamRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/name={value-name}/:
+  /data/tapi-common:context/tapi-streaming:stream-admin-context/stream-monitor={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-streaming"
@@ -1167,7 +1167,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/:
+  /data/tapi-common:context/tapi-streaming:stream-context:
     get:
       tags:
       - "tapi-streaming"
@@ -1230,7 +1230,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}:
     get:
       tags:
       - "tapi-streaming"
@@ -1249,7 +1249,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.AvailableStreamWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/name={value-name}/:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-streaming"
@@ -1275,7 +1275,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/supported-stream-type/:
+  /data/tapi-common:context/tapi-streaming:stream-context/available-stream={uuid}/supported-stream-type:
     get:
       tags:
       - "tapi-streaming"
@@ -1294,7 +1294,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.SupportedStreamTypeRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}:
     get:
       tags:
       - "tapi-streaming"
@@ -1313,7 +1313,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.streamcontext.SupportedStreamTypeWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/compacted-log-details/:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/compacted-log-details:
     get:
       tags:
       - "tapi-streaming"
@@ -1332,7 +1332,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.CompactedLogDetailsWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/connection-protocol-details/:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/connection-protocol-details:
     get:
       tags:
       - "tapi-streaming"
@@ -1351,7 +1351,7 @@ paths:
             $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetailsWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/name={value-name}/:
+  /data/tapi-common:context/tapi-streaming:stream-context/supported-stream-type={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-streaming"
@@ -1377,7 +1377,7 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-details/:
+  /operations/tapi-common:get-service-interface-point-details:
     post:
       tags:
       - "tapi-common"
@@ -1400,7 +1400,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-list/:
+  /operations/tapi-common:get-service-interface-point-list:
     post:
       tags:
       - "tapi-common"
@@ -1414,7 +1414,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:update-service-interface-point/:
+  /operations/tapi-common:update-service-interface-point:
     post:
       tags:
       - "tapi-common"
@@ -1433,7 +1433,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:connect-to-stream/:
+  /operations/tapi-streaming:connect-to-stream:
     post:
       tags:
       - "tapi-streaming"
@@ -1452,7 +1452,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:get-available-stream-connection-details/:
+  /operations/tapi-streaming:get-available-stream-connection-details:
     post:
       tags:
       - "tapi-streaming"
@@ -1466,7 +1466,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-streaming:get-supported-stream-connection-types/:
+  /operations/tapi-streaming:get-supported-stream-connection-types:
     post:
       tags:
       - "tapi-streaming"
@@ -1723,9 +1723,10 @@ definitions:
           items:
             $ref: "#/definitions/tapi.common.SupportedLayerProtocolQualifier"
         direction:
-          description: "The SIP direction.\r\n                If direction attribute\
-            \ is missing the ServiceInterfacePoint (SIP) instance is to be intended\
-            \ as 'BIDIRECTIONAL'."
+          description: "The SIP direction. It is intended the 'internal viewpoint',\
+            \ i.e. the source SIP is sending to the network, the sink SIP is sending\
+            \ from the network.\r\n                If direction attribute is missing\
+            \ the ServiceInterfacePoint (SIP) instance is to be intended as 'BIDIRECTIONAL'."
           $ref: "#/definitions/tapi.common.Direction"
       description: "A Service Interface Point represents the network-interface-facing\
         \ aspects of the edge-port functions that access the forwarding capabilities\
