--- a/OAS/tapi-common.yaml
+++ b/OAS/tapi-common.yaml
@@ -26,7 +26,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/tapi-common:context/:
+  /data/tapi-common:context:
     get:
       tags:
       - "tapi-common"
@@ -89,7 +89,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/name/:
+  /data/tapi-common:context/name:
     post:
       tags:
       - "tapi-common"
@@ -111,7 +111,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/name={value-name}/:
+  /data/tapi-common:context/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -176,7 +176,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile/:
+  /data/tapi-common:context/profile:
     post:
       tags:
       - "tapi-common"
@@ -196,7 +196,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/profile={uuid}/:
+  /data/tapi-common:context/profile={uuid}:
     get:
       tags:
       - "tapi-common"
@@ -255,7 +255,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/name/:
+  /data/tapi-common:context/profile={uuid}/name:
     post:
       tags:
       - "tapi-common"
@@ -282,7 +282,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/profile={uuid}/name={value-name}/:
+  /data/tapi-common:context/profile={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -362,7 +362,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile:
     get:
       tags:
       - "tapi-common"
@@ -445,7 +445,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -464,7 +464,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity/:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -484,7 +484,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point/:
+  /data/tapi-common:context/service-interface-point:
     post:
       tags:
       - "tapi-common"
@@ -504,7 +504,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}:
     get:
       tags:
       - "tapi-common"
@@ -563,7 +563,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity:
     get:
       tags:
       - "tapi-common"
@@ -582,7 +582,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size:
     get:
       tags:
       - "tapi-common"
@@ -602,7 +602,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-cep-layer-protocol-qualifier-instances/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-cep-layer-protocol-qualifier-instances:
     get:
       tags:
       - "tapi-common"
@@ -621,7 +621,7 @@ paths:
             $ref: "#/definitions/tapi.common.SupportedLayerProtocolQualifierWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -640,7 +640,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -660,7 +660,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/name/:
+  /data/tapi-common:context/service-interface-point={uuid}/name:
     post:
       tags:
       - "tapi-common"
@@ -687,7 +687,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}:
     get:
       tags:
       - "tapi-common"
@@ -767,7 +767,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/service-interface-point={uuid}/profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -791,7 +791,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/sink-profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/sink-profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -815,7 +815,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/source-profile={profile-uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/source-profile={profile-uuid}:
     get:
       tags:
       - "tapi-common"
@@ -839,7 +839,7 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-cep-layer-protocol-qualifier-instances/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-cep-layer-protocol-qualifier-instances:
     get:
       tags:
       - "tapi-common"
@@ -858,7 +858,7 @@ paths:
             $ref: "#/definitions/tapi.common.SupportedLayerProtocolQualifierWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -877,7 +877,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/supported-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -897,7 +897,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity:
     get:
       tags:
       - "tapi-common"
@@ -917,7 +917,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size:
     get:
       tags:
       - "tapi-common"
@@ -937,7 +937,7 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-details/:
+  /operations/tapi-common:get-service-interface-point-details:
     post:
       tags:
       - "tapi-common"
@@ -960,7 +960,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:get-service-interface-point-list/:
+  /operations/tapi-common:get-service-interface-point-list:
     post:
       tags:
       - "tapi-common"
@@ -974,7 +974,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/tapi-common:update-service-interface-point/:
+  /operations/tapi-common:update-service-interface-point:
     post:
       tags:
       - "tapi-common"
