--- a/OAS/tapi-fm.yaml
+++ b/OAS/tapi-fm.yaml
@@ -495,7 +495,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/supported-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -514,7 +514,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/supported-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -1071,7 +1071,7 @@ paths:
             $ref: "#/definitions/tapi.notification.notificationcontext.EventNotificationWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/additional-info:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/additional-info={value-name}:
     get:
       tags:
       - "tapi-notification"
@@ -1081,6 +1081,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       responses:
@@ -1839,30 +1844,7 @@ paths:
         204:
           description: "Object deleted"
   ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification={event-notification-uuid}/additional-info/
-  : get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.common.NameAndValue"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      - name: "event-notification-uuid"
-        in: "path"
-        description: "Id of event-notification"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.common.NameAndValue"
-          schema:
-            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-        400:
-          description: "Internal error"
-    post:
+  : post:
       tags:
       - "tapi-notification"
       summary: "creates tapi.common.NameAndValue"
@@ -1891,6 +1873,35 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification={event-notification-uuid}/additional-info={value-name}/
+  : get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.common.NameAndValue"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "event-notification-uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -1905,6 +1916,11 @@ paths:
       - name: "event-notification-uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       - in: "body"
@@ -1934,6 +1950,11 @@ paths:
       - name: "event-notification-uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       responses:
@@ -3784,7 +3805,7 @@ definitions:
         $ref: "#/definitions/tapi.common.CapacityValue"
   tapi.common.PayloadStructureWrapper:
     properties:
-      potential-payload-structure:
+      supported-payload-structure:
         $ref: "#/definitions/tapi.common.PayloadStructure"
   tapi.common.PmParameterValue:
     type: "object"
@@ -3960,7 +3981,7 @@ definitions:
   tapi.common.TransmissionCapabilityProfile:
     type: "object"
     properties:
-      potential-payload-structure:
+      supported-payload-structure:
         type: "array"
         description: "Description of (potential) capability."
         items:
@@ -4325,8 +4346,10 @@ definitions:
           description: "The best knowledge of the time of the event which originated\
             \ this Notification instance."
         additional-info:
+          type: "array"
           description: "none"
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          items:
+            $ref: "#/definitions/tapi.common.NameAndValue"
         sequence-number:
           type: "integer"
           format: "int32"
@@ -4381,27 +4404,27 @@ definitions:
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      attribute-value-change:
-        description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
-    x-augmentation:
-      prefix: "tapi-notification"
-      namespace: "urn:onf:otcc:yang:tapi-notification"
-  tapi.notification.EventNotificationAugmentation3:
-    type: "object"
-    properties:
       service-interface-point:
         description: "none"
         $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
-  tapi.notification.EventNotificationAugmentation4:
+  tapi.notification.EventNotificationAugmentation3:
     type: "object"
     properties:
       profile:
         description: "none"
         $ref: "#/definitions/tapi.common.Profile"
+    x-augmentation:
+      prefix: "tapi-notification"
+      namespace: "urn:onf:otcc:yang:tapi-notification"
+  tapi.notification.EventNotificationAugmentation4:
+    type: "object"
+    properties:
+      attribute-value-change:
+        description: "none"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -5098,18 +5121,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
