--- a/OAS/tapi-notification.yaml
+++ b/OAS/tapi-notification.yaml
@@ -461,7 +461,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/supported-payload-structure:
     get:
       tags:
       - "tapi-common"
@@ -480,7 +480,7 @@ paths:
             $ref: "#/definitions/tapi.common.PayloadStructureWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/potential-payload-structure/capacity:
+  /data/tapi-common:context/profile={uuid}/transmission-capability-profile/supported-payload-structure/capacity:
     get:
       tags:
       - "tapi-common"
@@ -1037,7 +1037,7 @@ paths:
             $ref: "#/definitions/tapi.notification.notificationcontext.EventNotificationWrapper"
         400:
           description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/additional-info:
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/additional-info={value-name}:
     get:
       tags:
       - "tapi-notification"
@@ -1047,6 +1047,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       responses:
@@ -1668,30 +1673,7 @@ paths:
         204:
           description: "Object deleted"
   ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification={event-notification-uuid}/additional-info/
-  : get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.common.NameAndValue"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      - name: "event-notification-uuid"
-        in: "path"
-        description: "Id of event-notification"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.common.NameAndValue"
-          schema:
-            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-        400:
-          description: "Internal error"
-    post:
+  : post:
       tags:
       - "tapi-notification"
       summary: "creates tapi.common.NameAndValue"
@@ -1720,6 +1702,35 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/event-notification={event-notification-uuid}/additional-info={value-name}/
+  : get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.common.NameAndValue"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "event-notification-uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -1734,6 +1745,11 @@ paths:
       - name: "event-notification-uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       - in: "body"
@@ -1763,6 +1779,11 @@ paths:
       - name: "event-notification-uuid"
         in: "path"
         description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
         required: true
         type: "string"
       responses:
@@ -3046,7 +3067,7 @@ definitions:
         $ref: "#/definitions/tapi.common.CapacityValue"
   tapi.common.PayloadStructureWrapper:
     properties:
-      potential-payload-structure:
+      supported-payload-structure:
         $ref: "#/definitions/tapi.common.PayloadStructure"
   tapi.common.Profile:
     type: "object"
@@ -3181,7 +3202,7 @@ definitions:
   tapi.common.TransmissionCapabilityProfile:
     type: "object"
     properties:
-      potential-payload-structure:
+      supported-payload-structure:
         type: "array"
         description: "Description of (potential) capability."
         items:
@@ -3283,8 +3304,10 @@ definitions:
           description: "The best knowledge of the time of the event which originated\
             \ this Notification instance."
         additional-info:
+          type: "array"
           description: "none"
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          items:
+            $ref: "#/definitions/tapi.common.NameAndValue"
         sequence-number:
           type: "integer"
           format: "int32"
@@ -3339,18 +3362,18 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      attribute-value-change:
+      profile:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.Profile"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      profile:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.Profile"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
